--- a/OrganizationDataAPI/DataAccess/OrganizationData.Data/OrganizationData.Data.csproj
+++ b/OrganizationDataAPI/DataAccess/OrganizationData.Data/OrganizationData.Data.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrganizationData.Data.Abstractions\OrganizationData.Data.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
