--- a/OrganizationDataAPI/DataAccess/OrganizationData.Data.Abstractions/OrganizationData.Data.Abstractions.csproj
+++ b/OrganizationDataAPI/DataAccess/OrganizationData.Data.Abstractions/OrganizationData.Data.Abstractions.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OrganizationData.Data.Entities\OrganizationData.Data.Entities.csproj" />
   </ItemGroup>
 
