--- a/OrganizationDataAPI/Application/OrganizationData.Application.Abstractions/OrganizationData.Application.Abstractions.csproj
+++ b/OrganizationDataAPI/Application/OrganizationData.Application.Abstractions/OrganizationData.Application.Abstractions.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\DataAccess\OrganizationData.Data\OrganizationData.Data.csproj" />
+  </ItemGroup>
+
 </Project>
