--- a/OrganizationDataAPI/OrganizationData.API/appsettings.json
+++ b/OrganizationDataAPI/OrganizationData.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "OrganizationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=OrganizationData;"
+  }
 }
