client service and controller outline

--- a/OrganizationDataAPI/Application/OrganizationData.Application.Abstractions/OrganizationData.Application.Abstractions.csproj
+++ b/OrganizationDataAPI/Application/OrganizationData.Application.Abstractions/OrganizationData.Application.Abstractions.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\DataAccess\OrganizationData.Data\OrganizationData.Data.csproj" />
+    <ProjectReference Include="..\OrganizationData.Application.DTO\OrganizationData.Application.DTO.csproj" />
   </ItemGroup>
 
 </Project>
