--- a/OrganizationDataAPI/Application/OrganizationData.Application/OrganizationData.Application.csproj
+++ b/OrganizationDataAPI/Application/OrganizationData.Application/OrganizationData.Application.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
