--- a/OrganizationDataAPI/OrganizationData.API/appsettings.json
+++ b/OrganizationDataAPI/OrganizationData.API/appsettings.json
@@ -9,5 +9,10 @@
 
   "ConnectionStrings": {
     "OrganizationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=OrganizationData;"
+  },
+
+  "OrganizationApiOptions": {
+    "FileReaderDir": "C:\\main_folder\\programs\\c#\\api_individual\\DataToRead",
+    "ProcessedFilesDir": "C:\\main_folder\\programs\\c#\\api_individual\\ProcessedData"
   }
 }
