--- a/OrganizationDataAPI/OrganizationData.API/appsettings.json
+++ b/OrganizationDataAPI/OrganizationData.API/appsettings.json
@@ -13,6 +13,11 @@
 
   "OrganizationApiOptions": {
     "FileReaderDir": "C:\\main_folder\\programs\\c#\\api_individual\\DataToRead",
-    "ProcessedFilesDir": "C:\\main_folder\\programs\\c#\\api_individual\\ProcessedData"
+    "ProcessedFilesDir": "C:\\main_folder\\programs\\c#\\api_individual\\ProcessedData",
+    "AuthSettings": {
+      "SecretKey": "6E9D79719B5D6A7493153BEB57E4D",
+      "Issuer": "idk",
+      "Audience": "org.api"
+    }
   }
 }
