--- a/OrganizationDataAPI/OrganizationData.API/appsettings.json
+++ b/OrganizationDataAPI/OrganizationData.API/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "OrganizationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=OrganizationData;"
+    "OrganizationDbContextConnection": "Server=;Database=OrganizationData;Trusted_Connection=True;TrustServerCertificate=True;"
   },
 
   "OrganizationApiOptions": {
