million records speed improvment

--- a/OrganizationDataAPI/OrganizationData.API/appsettings.json
+++ b/OrganizationDataAPI/OrganizationData.API/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "OrganizationDbContextConnection": "Server=DESKTOP-MR3OHEC\\SQLEXPRESS;Database=OrganizationData;Trusted_Connection=True;TrustServerCertificate=True;"
+    "OrganizationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=OrganizationData;"
   },
 
   "OrganizationApiOptions": {
