--- a/OrganizationDataAPI/Application/OrganizationData.Application/OrganizationData.Application.csproj
+++ b/OrganizationDataAPI/Application/OrganizationData.Application/OrganizationData.Application.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="JWT" Version="10.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.0" />
+    <PackageReference Include="QuestPDF" Version="2023.12.4" />
   </ItemGroup>
 
   <ItemGroup>
